--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,23 @@
   background: #fff;
 }
 
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: #3f3f3f;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #11b1ff;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #0f94d6;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
